верстка почти готова

--- a/index.html
+++ b/index.html
@@ -10,58 +10,58 @@
     <header class="header">
       <a class="logo__white" href=""></a>
     </header>
-    <main>
+    <main class="content">
       <section class="profile">
         <div class="profile__avatar"></div>
         <div class="profile__info">
-          <h2 class="profile__info_name">Жак-Ив Кусто</h2>
-          <p class="profile__info_job">Исследователь океана</p>
+          <h2 class="profile__info-name">Жак-Ив Кусто</h2>
+          <p class="profile__info-job">Исследователь океана</p>
         </div>
-        <button class="profile__button_edit"></button>
-        <button class="profile__button_add"></button>
+        <button class="profile__button-edit"></button>
+        <button class="profile__button-add"></button>
       </section>
       <section class="elements">
         <ul class="element__grids">
-          <li class="element__grid">
-            <img class="element__grid_image" src="././images/6.jpg" />
-            <div class="element__grid_info">
-              <p class="element__grid_title">Москва</p>
-              <button class="element__grid_like"></button>
+          <li class="element">
+            <img class="element__image" src="././images/6.jpg" />
+            <div class="element__info">
+              <p class="element__title">Москва</p>
+              <button class="element__like"></button>
             </div>
           </li>
-          <li class="element__grid">
-            <img class="element__grid_image" src="././images/2.jpg" />
-            <div class="element__grid_info">
-              <p class="element__grid_title">Гора Эльбрус</p>
-              <button class="element__grid_like"></button>
+          <li class="element">
+            <img class="element__image" src="././images/2.jpg" />
+            <div class="element__info">
+              <p class="element__title">Гора Эльбрус</p>
+              <button class="element__like"></button>
             </div>
           </li>
-          <li class="element__grid">
-            <img class="element__grid_image" src="././images/3.jpg" />
-            <div class="element__grid_info">
-              <p class="element__grid_title">Зябликово</p>
-              <button class="element__grid_like"></button>
+          <li class="element">
+            <img class="element__image" src="././images/3.jpg" />
+            <div class="element__info">
+              <p class="element__title">Зябликово</p>
+              <button class="element__like"></button>
             </div>
           </li>
-          <li class="element__grid">
-            <img class="element__grid_image" src="././images/4.jpg" />
-            <div class="element__grid_info">
-              <p class="element__grid_title">Гора Эльбрус</p>
-              <button class="element__grid_like"></button>
+          <li class="element">
+            <img class="element__image" src="././images/4.jpg" />
+            <div class="element__info">
+              <p class="element__title">Гора Эльбрус</p>
+              <button class="element__like"></button>
             </div>
           </li>
-          <li class="element__grid">
-            <img class="element__grid_image" src="././images/3.jpg" />
-            <div class="element__grid_info">
-              <p class="element__grid_title">Зюзино</p>
-              <button class="element__grid_like"></button>
+          <li class="element">
+            <img class="element__image" src="././images/3.jpg" />
+            <div class="element__info">
+              <p class="element__title">Зюзино</p>
+              <button class="element__like"></button>
             </div>
           </li>
-          <li class="element__grid">
-            <img class="element__grid_image" src="././images/6.jpg" />
-            <div class="element__grid_info">
-              <p class="element__grid_title">Карачаево-Черкесия</p>
-              <button class="element__grid_like"></button>
+          <li class="element">
+            <img class="element__image" src="././images/6.jpg" />
+            <div class="element__info">
+              <p class="element__title">Карачаево-Черкесия</p>
+              <button class="element__like"></button>
             </div>
           </li>
         </ul>
