--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
               <p class="element__title">Гора Эльбрус</p>
               <button class="element__like"></button>
             </div>
+            <section class="popup popup__opened">
+              <div class="popup__container">
+                <h2 class="popup__title">Редактировать профиль</h2>
+                <input type="text" placeholder="Жак-Ив Кусто" class="popup__text popup__text_type_name">
+                <input type="text" placeholder="Исследователь океана" class="popup__text popup__text_type_job">
+                <button class="form__submit-btn form__submit-btn_action_save">Сохранить</button>
+                <button class="popup__close"></button>
+              </div>
+            </section>
           </li>
           <li class="element">
             <img class="element__image" src="././images/3.jpg" />
