--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Место</title>
-    <link rel="stylesheet" href="./page/index.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="page">
     <header class="header">
-      <a class="logo__white" href=""></a>
+      <a class="logo" href="#"></a>
     </header>
     <main class="content"> 
       <section class="profile">
@@ -26,7 +26,7 @@
           <h2 class="popup__title">Редактировать профиль</h2>
           <input id="name" placeholder="Жак-Ив Кусто" class="popup__text popup__text_type_name">
           <input id="job" placeholder="Исследователь океана" class="popup__text popup__text_type_job">
-          <button type="submit" class="form__submit-btn">Сохранить</button>
+          <button type="submit" class="popup__submit-btn">Сохранить</button>
           </form>
           <button type="button" class="popup__close"></button>
         </div>
@@ -34,44 +34,44 @@
       <section class="elements">
         <ul class="element__grids">
           <li class="element">
-            <img class="element__image" src="././images/6.jpg" />
+            <img class="element__image" src="././images/1.jpg" alt="озеро Байкал с высоты птьичего полета"/>
             <div class="element__info">
-              <p class="element__title">Москва</p>
+              <h3 class="element__title">Озеро Байкал</h3>
               <button class="element__like"></button>
             </div>
           </li>
           <li class="element">
-            <img class="element__image" src="././images/2.jpg" />
+            <img class="element__image" src="././images/2.jpg" alt="Вулкан Этна с высоты птьичего полета"/>
             <div class="element__info">
-              <p class="element__title">Гора Эльбрус</p>
+              <h3 class="element__title">Вулкан Этна</h3>
               <button class="element__like"></button>
             </div>
           </li>
           <li class="element">
-            <img class="element__image" src="././images/1.jpg" />
+            <img class="element__image" src="././images/6.jpg" alt="Поле с высоты птьичего полета с лошадьми" />
             <div class="element__info">
-              <p class="element__title">Зябликово</p>
+              <p class="element__title">Поле</p>
               <button class="element__like"></button>
             </div>
           </li>
           <li class="element">
-            <img class="element__image" src="././images/4.jpg" />
+            <img class="element__image" src="././images/4.jpg" alt="Андреевская пустынь Соловецкого монастыря"/>
             <div class="element__info">
-              <p class="element__title">Гора Эльбрус</p>
+              <h3 class="element__title">Соловецкие острова</h3>
               <button class="element__like"></button>
             </div>
           </li>
           <li class="element">
-            <img class="element__image" src="././images/3.jpg" />
+            <img class="element__image" src="././images/5.jpg" alt="Холм Божий дар Ставропольский край" />
             <div class="element__info">
-              <p class="element__title">Зюзино</p>
+              <p class="element__title">Холм</p>
               <button class="element__like"></button>
             </div>
           </li>
           <li class="element">
-            <img class="element__image" src="././images/6.jpg" />
+            <img class="element__image" src="././images/3.jpg" alt="Водобашня в поселке Таёжный"/>
             <div class="element__info">
-              <p class="element__title">Карачаево-Черкесия</p>
+              <p class="element__title">Красноярский край</p>
               <button class="element__like"></button>
             </div>
           </li>
