fixed trabble html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
       <a class="logo" href="#"></a>
     </header>
-    <main class="content"> 
+    <main class="content">
       <section class="profile">
         <div class="profile__avatar"></div>
         <div class="profile__info">
@@ -23,53 +23,85 @@
       <div class="popup">
         <form id="form">
           <div class="popup__container">
-          <h2 class="popup__title">Редактировать профиль</h2>
-          <input id="name" placeholder="Жак-Ив Кусто" class="popup__text popup__text_type_name">
-          <input id="job" placeholder="Исследователь океана" class="popup__text popup__text_type_job">
-          <button type="submit" class="popup__submit-btn">Сохранить</button>
-          </form>
-          <button type="button" class="popup__close"></button>
-        </div>
+            <h2 class="popup__title">Редактировать профиль</h2>
+            <input
+              id="name"
+              placeholder="Жак-Ив Кусто"
+              class="popup__text popup__text_type_name"
+            />
+            <input
+              id="job"
+              placeholder="Исследователь океана"
+              class="popup__text popup__text_type_job"
+            />
+            <button type="submit" class="popup__submit-btn">Сохранить</button>
+          </div>
+        </form>
+        <button type="button" class="popup__close"></button>
       </div>
       <section class="elements">
         <ul class="element__grids">
           <li class="element">
-            <img class="element__image" src="././images/1.jpg" alt="озеро Байкал с высоты птьичего полета"/>
+            <img
+              class="element__image"
+              src="././images/1.jpg"
+              alt="озеро Байкал с высоты птьичего полета"
+            />
             <div class="element__info">
               <h3 class="element__title">Озеро Байкал</h3>
               <button class="element__like"></button>
             </div>
           </li>
           <li class="element">
-            <img class="element__image" src="././images/2.jpg" alt="Вулкан Этна с высоты птьичего полета"/>
+            <img
+              class="element__image"
+              src="././images/2.jpg"
+              alt="Вулкан Этна с высоты птьичего полета"
+            />
             <div class="element__info">
               <h3 class="element__title">Вулкан Этна</h3>
               <button class="element__like"></button>
             </div>
           </li>
           <li class="element">
-            <img class="element__image" src="././images/6.jpg" alt="Поле с высоты птьичего полета с лошадьми" />
+            <img
+              class="element__image"
+              src="././images/6.jpg"
+              alt="Поле с высоты птьичего полета с лошадьми"
+            />
             <div class="element__info">
               <p class="element__title">Поле</p>
               <button class="element__like"></button>
             </div>
           </li>
           <li class="element">
-            <img class="element__image" src="././images/4.jpg" alt="Андреевская пустынь Соловецкого монастыря"/>
+            <img
+              class="element__image"
+              src="././images/4.jpg"
+              alt="Андреевская пустынь Соловецкого монастыря"
+            />
             <div class="element__info">
               <h3 class="element__title">Соловецкие острова</h3>
               <button class="element__like"></button>
             </div>
           </li>
           <li class="element">
-            <img class="element__image" src="././images/5.jpg" alt="Холм Божий дар Ставропольский край" />
+            <img
+              class="element__image"
+              src="././images/5.jpg"
+              alt="Холм Божий дар Ставропольский край"
+            />
             <div class="element__info">
               <p class="element__title">Холм</p>
               <button class="element__like"></button>
             </div>
           </li>
           <li class="element">
-            <img class="element__image" src="././images/3.jpg" alt="Водобашня в поселке Таёжный"/>
+            <img
+              class="element__image"
+              src="././images/3.jpg"
+              alt="Водобашня в поселке Таёжный"
+            />
             <div class="element__info">
               <p class="element__title">Красноярский край</p>
               <button class="element__like"></button>
