fixed trabble bam

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <button type="button" class="popup__close"></button>
       </div>
       <section class="elements">
-        <ul class="element__grids">
-          <li class="element">
+        <ul class="element__grid">
+          <li class="element__container">
             <img
               class="element__image"
               src="././images/1.jpg"
@@ -52,7 +52,7 @@
               <button class="element__like"></button>
             </div>
           </li>
-          <li class="element">
+          <li class="element__container">
             <img
               class="element__image"
               src="././images/2.jpg"
@@ -63,7 +63,7 @@
               <button class="element__like"></button>
             </div>
           </li>
-          <li class="element">
+          <li class="element__container">
             <img
               class="element__image"
               src="././images/6.jpg"
@@ -74,7 +74,7 @@
               <button class="element__like"></button>
             </div>
           </li>
-          <li class="element">
+          <li class="element__container">
             <img
               class="element__image"
               src="././images/4.jpg"
@@ -85,7 +85,7 @@
               <button class="element__like"></button>
             </div>
           </li>
-          <li class="element">
+          <li class="element__container">
             <img
               class="element__image"
               src="././images/5.jpg"
@@ -96,7 +96,7 @@
               <button class="element__like"></button>
             </div>
           </li>
-          <li class="element">
+          <li class="element__container">
             <img
               class="element__image"
               src="././images/3.jpg"
