fixed trabble bam

--- a/index.html
+++ b/index.html
@@ -40,71 +40,71 @@
         <button type="button" class="popup__close"></button>
       </div>
       <section class="elements">
-        <ul class="element__grid">
-          <li class="element__container">
+        <ul class="elements__grid">
+          <li class="elements__container">
             <img
-              class="element__image"
+              class="elements__image"
               src="././images/1.jpg"
               alt="озеро Байкал с высоты птьичего полета"
             />
-            <div class="element__info">
-              <h3 class="element__title">Озеро Байкал</h3>
-              <button class="element__like"></button>
+            <div class="elements__info">
+              <h3 class="elements__title">Озеро Байкал</h3>
+              <button class="elements__like"></button>
             </div>
           </li>
-          <li class="element__container">
+          <li class="elements__container">
             <img
-              class="element__image"
+              class="elements__image"
               src="././images/2.jpg"
               alt="Вулкан Этна с высоты птьичего полета"
             />
-            <div class="element__info">
-              <h3 class="element__title">Вулкан Этна</h3>
-              <button class="element__like"></button>
+            <div class="elements__info">
+              <h3 class="elements__title">Вулкан Этна</h3>
+              <button class="elements__like"></button>
             </div>
           </li>
-          <li class="element__container">
+          <li class="elements__container">
             <img
-              class="element__image"
+              class="elements__image"
               src="././images/6.jpg"
               alt="Поле с высоты птьичего полета с лошадьми"
             />
-            <div class="element__info">
-              <p class="element__title">Поле</p>
-              <button class="element__like"></button>
+            <div class="elements__info">
+              <p class="elements__title">Поле</p>
+              <button class="elements__like"></button>
             </div>
           </li>
-          <li class="element__container">
+          <li class="elements__container">
             <img
-              class="element__image"
+              class="elements__image"
               src="././images/4.jpg"
               alt="Андреевская пустынь Соловецкого монастыря"
             />
-            <div class="element__info">
-              <h3 class="element__title">Соловецкие острова</h3>
-              <button class="element__like"></button>
+            <div class="elements__info">
+              <h3 class="elements__title">Соловецкие острова</h3>
+              <button class="elements__like"></button>
             </div>
           </li>
-          <li class="element__container">
+          <li class="elements__container">
             <img
-              class="element__image"
+              class="elements__image"
               src="././images/5.jpg"
               alt="Холм Божий дар Ставропольский край"
             />
-            <div class="element__info">
-              <p class="element__title">Холм</p>
-              <button class="element__like"></button>
+            <div class="elements__info">
+              <p class="elements__title">Холм</p>
+              <button class="elements__like"></button>
             </div>
           </li>
-          <li class="element__container">
+          <li class="elements__container">
             <img
-              class="element__image"
+              class="elements__image"
               src="././images/3.jpg"
               alt="Водобашня в поселке Таёжный"
             />
-            <div class="element__info">
-              <p class="element__title">Красноярский край</p>
-              <button class="element__like"></button>
+            <div class="elements__info">
+              <p class="elements__title">Красноярский край</p>
+              <button class="elements__like"></button>
             </div>
           </li>
         </ul>
