--- a/index.html
+++ b/index.html
@@ -8,37 +8,37 @@
   </head>
   <body class="page">
     <header class="header">
-      <a class="logo" href="#"></a>
+      <a class="header__logo" href="#"></a>
     </header>
+    <div class="popup">
+        <div class="popup__container">
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <form id="form" name="form_profile">
+          <input
+            id="name"
+            placeholder="Жак-Ив Кусто"
+            class="popup__text popup__text_type_name"
+          />
+          <input
+            id="job"
+            placeholder="Исследователь океана"
+            class="popup__text popup__text_type_job"
+          />
+          <button type="button" class="popup__close"></button>
+          <button type="submit" class="popup__submit-btn">Сохранить</button>
+        </form>
+        </div>
+    </div>
     <main class="content">
       <section class="profile">
         <div class="profile__avatar"></div>
         <div class="profile__info">
           <h1 class="profile__info-name"></h1>
           <p class="profile__info-job"></p>
-          <button class="profile__button-edit"></button>
+          <button type="button" class="profile__button-edit"></button>
         </div>
-        <button class="profile__button-add"></button>
+        <button type="submit" class="profile__button-add"></button>
       </section>
-      <div class="popup">
-        <form id="form">
-          <div class="popup__container">
-            <h2 class="popup__title">Редактировать профиль</h2>
-            <input
-              id="name"
-              placeholder="Жак-Ив Кусто"
-              class="popup__text popup__text_type_name"
-            />
-            <input
-              id="job"
-              placeholder="Исследователь океана"
-              class="popup__text popup__text_type_job"
-            />
-            <button type="submit" class="popup__submit-btn">Сохранить</button>
-          </div>
-        </form>
-        <button type="button" class="popup__close"></button>
-      </div>
       <section class="elements">
         <ul class="elements__grid">
           <li class="elements__container">
