--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Место</title>
-    <link rel="stylesheet" href="./pages/index.css">
+    <link rel="stylesheet" href="./pages/index.css" />
   </head>
-  <!--Иван, добрый день! спасибо огромное за проверку и комментарии-->
+  <!--Иван, добрый вечер! спасибо огромное за проверку еще раз. Вроде все учла &#9829;-->
   <body class="page">
     <header class="header">
       <a class="header__logo" href="#"></a>
@@ -19,87 +19,87 @@
           <p class="profile__info-job">Исследователь океана</p>
           <button type="button" class="profile__button-edit"></button>
         </div>
-        <button type="submit" class="profile__button-add"></button>
+        <button type="button" class="profile__button-add"></button>
       </section>
       <section class="elements">
         <div class="elements__grid">
           <article class="elements__container">
             <div class="elements__info">
               <img
-              class="elements__image"
-              src="././images/1.jpg"
-              alt="озеро Байкал с высоты птьичего полета"
-            />
-            <div class="elements__data">
-              <h2 class="elements__title">Озеро Байкал</h2>
-              <button type="button" class="elements__like"></button>
-            </div>
-            </div>
-          </article>
-          <article class="elements__container">
-            <div class="elements__info">
-            <img
-              class="elements__image"
-              src="././images/2.jpg"
-              alt="Вулкан Этна с высоты птьичего полета"
-            />
-            <div class="elements__data">
-              <h2 class="elements__title">Вулкан Этна</h2>
-              <button type="button" class="elements__like"></button>
-            </div>
+                class="elements__image"
+                src="././images/1.jpg"
+                alt="озеро Байкал с высоты птьичего полета"
+              />
+              <div class="elements__data">
+                <h2 class="elements__title">Озеро Байкал</h2>
+                <button type="button" class="elements__like"></button>
+              </div>
             </div>
           </article>
           <article class="elements__container">
             <div class="elements__info">
-            <img
-              class="elements__image"
-              src="././images/6.jpg"
-              alt="Поле с высоты птьичего полета с лошадьми"
-            />
-            <div class="elements__data">
-              <h2 class="elements__title">Поле</h2>
-              <button type="button" class="elements__like"></button>
+              <img
+                class="elements__image"
+                src="././images/2.jpg"
+                alt="Вулкан Этна с высоты птьичего полета"
+              />
+              <div class="elements__data">
+                <h2 class="elements__title">Вулкан Этна</h2>
+                <button type="button" class="elements__like"></button>
+              </div>
             </div>
-          </div>
           </article>
           <article class="elements__container">
             <div class="elements__info">
-            <img
-              class="elements__image"
-              src="././images/4.jpg"
-              alt="Андреевская пустынь Соловецкого монастыря"
-            />
-            <div class="elements__data">
-              <h2 class="elements__title">Соловецкие острова</h2>
-              <button type="button" class="elements__like"></button>
+              <img
+                class="elements__image"
+                src="././images/6.jpg"
+                alt="Поле с высоты птьичего полета с лошадьми"
+              />
+              <div class="elements__data">
+                <h2 class="elements__title">Поле</h2>
+                <button type="button" class="elements__like"></button>
+              </div>
             </div>
-          </div>
           </article>
           <article class="elements__container">
             <div class="elements__info">
-            <img
-              class="elements__image"
-              src="././images/5.jpg"
-              alt="Холм Божий дар Ставропольский край"
-            />
-            <div class="elements__data">
-              <h2 class="elements__title">Холм</h2>
-              <button type="button" class="elements__like"></button>
+              <img
+                class="elements__image"
+                src="././images/4.jpg"
+                alt="Андреевская пустынь Соловецкого монастыря"
+              />
+              <div class="elements__data">
+                <h2 class="elements__title">Соловецкие острова</h2>
+                <button type="button" class="elements__like"></button>
+              </div>
             </div>
-          </div>
           </article>
           <article class="elements__container">
             <div class="elements__info">
-            <img
-              class="elements__image"
-              src="././images/3.jpg"
-              alt="Водобашня в поселке Таёжный"
-            />
-            <div class="elements__data">
-              <h2 class="elements__title">Красноярский край</h2>
-              <button type="button" class="elements__like"></button>
+              <img
+                class="elements__image"
+                src="././images/5.jpg"
+                alt="Холм Божий дар Ставропольский край"
+              />
+              <div class="elements__data">
+                <h2 class="elements__title">Холм</h2>
+                <button type="button" class="elements__like"></button>
+              </div>
             </div>
-          </div>
+          </article>
+          <article class="elements__container">
+            <div class="elements__info">
+              <img
+                class="elements__image"
+                src="././images/3.jpg"
+                alt="Водобашня в поселке Таёжный"
+              />
+              <div class="elements__data">
+                <h2 class="elements__title">Красноярский край</h2>
+                <button type="button" class="elements__like"></button>
+              </div>
+            </div>
           </article>
         </div>
       </section>
@@ -108,19 +108,20 @@
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" id="form" name="form-profile">
-        <input
-          id="name" type="text" value="Лена Тицкая"
-          class="popup__text popup__text_type_name"
-        />
-        <input
-          id="job" type="text" value="Космонавт"
-          class="popup__text popup__text_type_job"
-        />
+          <input id="name" type="text" value="Лена Тицкая" name="username"
+          class="popup__text popup__text_type_name" />
+          <input
+            id="job"
+            type="text"
+            value="Космонавт"
+            name="profession"
+            class="popup__text popup__text_type_job"
+          />
+          <button type="submit" class="popup__submit-btn">Сохранить</button>
+        </form>
         <button type="button" class="popup__close"></button>
-        <button type="submit" class="popup__submit-btn">Сохранить</button>
-      </form>
       </div>
-  </div>
+    </div>
     <footer class="footer">
       <p class="footer__copyright">© 2023. Тицкая Елена</p>
     </footer>
