--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Место</title>
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
-  <!--Иван, добрый вечер! спасибо огромное за проверку еще раз. Вроде все учла &#9829;-->
+  <!--Иван, добрый день) все ок, все равно можно проходить дальше тренажер, так что проверка
+  не задерживает дальнейшую программу;)-->
   <body class="page">
     <header class="header">
       <a class="header__logo" href="#"></a>
@@ -23,81 +24,81 @@
       </section>
       <section class="elements">
         <div class="elements__grid">
-          <article class="elements__container">
-            <div class="elements__info">
+          <article class="element">
+            <div class="element__info">
               <img
-                class="elements__image"
+                class="element__image"
                 src="././images/1.jpg"
                 alt="озеро Байкал с высоты птьичего полета"
               />
-              <div class="elements__data">
-                <h2 class="elements__title">Озеро Байкал</h2>
-                <button type="button" class="elements__like"></button>
+              <div class="element__data">
+                <h2 class="element__title">Озеро Байкал</h2>
+                <button type="button" class="element__like"></button>
               </div>
             </div>
           </article>
-          <article class="elements__container">
-            <div class="elements__info">
+          <article class="element">
+            <div class="element__info">
               <img
-                class="elements__image"
+                class="element__image"
                 src="././images/2.jpg"
                 alt="Вулкан Этна с высоты птьичего полета"
               />
-              <div class="elements__data">
-                <h2 class="elements__title">Вулкан Этна</h2>
-                <button type="button" class="elements__like"></button>
+              <div class="element__data">
+                <h2 class="element__title">Вулкан Этна</h2>
+                <button type="button" class="element__like"></button>
               </div>
             </div>
           </article>
-          <article class="elements__container">
-            <div class="elements__info">
+          <article class="element">
+            <div class="element__info">
               <img
-                class="elements__image"
+                class="element__image"
                 src="././images/6.jpg"
                 alt="Поле с высоты птьичего полета с лошадьми"
               />
-              <div class="elements__data">
-                <h2 class="elements__title">Поле</h2>
-                <button type="button" class="elements__like"></button>
+              <div class="element__data">
+                <h2 class="element__title">Поле</h2>
+                <button type="button" class="element__like"></button>
               </div>
             </div>
           </article>
-          <article class="elements__container">
-            <div class="elements__info">
+          <article class="element">
+            <div class="element__info">
               <img
-                class="elements__image"
+                class="element__image"
                 src="././images/4.jpg"
                 alt="Андреевская пустынь Соловецкого монастыря"
               />
-              <div class="elements__data">
-                <h2 class="elements__title">Соловецкие острова</h2>
-                <button type="button" class="elements__like"></button>
+              <div class="element__data">
+                <h2 class="element__title">Соловецкие острова</h2>
+                <button type="button" class="element__like"></button>
               </div>
             </div>
           </article>
-          <article class="elements__container">
-            <div class="elements__info">
+          <article class="element">
+            <div class="element__info">
               <img
-                class="elements__image"
+                class="element__image"
                 src="././images/5.jpg"
                 alt="Холм Божий дар Ставропольский край"
               />
-              <div class="elements__data">
-                <h2 class="elements__title">Холм</h2>
-                <button type="button" class="elements__like"></button>
+              <div class="element__data">
+                <h2 class="element__title">Холм</h2>
+                <button type="button" class="element__like"></button>
               </div>
             </div>
           </article>
-          <article class="elements__container">
-            <div class="elements__info">
+          <article class="element">
+            <div class="element__info">
               <img
-                class="elements__image"
+                class="element__image"
                 src="././images/3.jpg"
                 alt="Водобашня в поселке Таёжный"
               />
-              <div class="elements__data">
-                <h2 class="elements__title">Красноярский край</h2>
-                <button type="button" class="elements__like"></button>
+              <div class="element__data">
+                <h2 class="element__title">Красноярский край</h2>
+                <button type="button" class="element__like"></button>
               </div>
             </div>
           </article>
@@ -108,8 +109,13 @@
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" id="form" name="form-profile">
-          <input id="name" type="text" value="Лена Тицкая" name="username"
-          class="popup__text popup__text_type_name" />
+          <input
+            id="name"
+            type="text"
+            value="Лена Тицкая"
+            name="username"
+            class="popup__text popup__text_type_name"
+          />
           <input
             id="job"
             type="text"
