--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           />
           <button type="submit" class="popup__submit-btn">Сохранить</button>
         </form>
-        <button type="button" class="popup__close"></button>
+        <button type="button" class="popup__close popup__close_type_edit"></button>
       </div>
     </section>
     <section class="popup popup_type_add">
@@ -169,7 +169,6 @@
         <img class="popup__image_card" src="#" alt="#">
         <p class="popup__image_name"></p>
       </div>
-       
         <button type="button" class="popup__close popup__close_type_image"></button>
     </section>
     <footer class="footer">
