--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
           <input
             id="title"
             type="text"
-            value="Название"
+            placeholder="Название"
             name="title"
             class="popup__text popup__text_type_title"
           />
           <input
             id="link"
             type="url"
-            value="Ссылка на картинку"
+            placeholder="Ссылка на картинку"
             name="link"
             class="popup__text popup__text_type_link"
           />
@@ -166,10 +166,10 @@
     </section>
     <section class="popup popup_type_image">
       <div class="popup__image">
+        <button type="button" class="popup__close popup__close_type_image"></button>
         <img class="popup__image_card" src="#" alt="#">
         <p class="popup__image_name"></p>
-      </div>
-        <button type="button" class="popup__close popup__close_type_image"></button>
+    </div>
     </section>
     <footer class="footer">
       <p class="footer__copyright">© 2023. Тицкая Елена</p>
