--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
     <section class="popup popup_type_image">
       <div class="popup__image">
         <button type="button" class="popup__close popup__close_type_image"></button>
-        <img class="popup__image_card" src="#" alt="#">
-        <p class="popup__image_name"></p>
+        <img class="popup__image-card" src="#" alt="#">
+        <p class="popup__image-name"></p>
     </div>
     </section>
     <footer class="footer">
